Added EventManagementAPI client, refactoring all client-side code

--- a/src/TicketManagement.ReactJS/ClientApp/src/localization/be-BY.json
+++ b/src/TicketManagement.ReactJS/ClientApp/src/localization/be-BY.json
@@ -55,7 +55,7 @@
     "EventLogoImage": "Малюнак",
     "First Name": "Імя",
     "For local debugging: enable the": "Дзеля лакальнай адладкi уключыце",
-    "Hello": "Добры дзень:",
+    "Hello": "Добры дзень",
     "Home Page": "Галоўная старонка",
     "It can result in displaying sensitive information from exceptions to end users.": "Гэта можа прывесці да таго: што канфідэнцыяльная інфармацыя з выключэнняў будзе паказвацца канчатковым карыстальнікам.",
     "Language": "Мова",
@@ -97,6 +97,7 @@
     "Select Venues": "Выбраць месца",
     "Select": "Выбраць",
     "shopping cart": "кошык",
+    "Sign In": "Вайсцi",
     "Sur Name": "Прозвiшча",
     "SurName": "Прозвішча",
     "Swapping to": "Змянице на",
@@ -106,9 +107,9 @@
     "Time zone": "Часавы ланцуг",
     "To top up your balance: go to your": "Каб папоўнiць баланс: перайдзiце ў",
     "To up balance:": "Папоўнiць рахунак:",
-    "Total Events:": "Усяго падзей:",
+    "Total Events:": "Падзей:",
     "Total purchase:": "Колькасць пакупак:",
-    "Total ThirdPartyEvents to Add:": "Усяго экспартуямых мерапрыемстваў:",
+    "Total ThirdPartyEvents to Add:": "Экспартуямых мерапрыемстваў:",
     "Update password": "Абнавіць пароль",
     "Upload Event from file:": "Загрузiць мерапрыемства з файлу:",
     "Use a local account to log in.": "Выкарыстоўвайце лакальны ўліковы запіс для ўваходу.",
