--- a/src/TicketManagement.ReactJS/ClientApp/src/localization/en-EN.json
+++ b/src/TicketManagement.ReactJS/ClientApp/src/localization/en-EN.json
@@ -97,6 +97,7 @@
     "Select Venues": "Select Venues",
     "Select": "Select",
     "shopping cart": "shopping cart",
+    "Sign In": "Sign In",
     "Sur Name": "Sur Name",
     "SurName": "SurName",
     "Swapping to": "Swapping to",
