--- a/src/TicketManagement.ReactJS/ClientApp/src/localization/ru-RU.json
+++ b/src/TicketManagement.ReactJS/ClientApp/src/localization/ru-RU.json
@@ -55,7 +55,7 @@
     "EventLogoImage": "Постер",
     "First Name": "Имя",
     "For local debugging: enable the": "Для локальной отладки включите",
-    "Hello": "Привет:",
+    "Hello": "Привет",
     "Home Page": "Главная страница",
     "It can result in displaying sensitive information from exceptions to end users.": "Это может привести к отображению конфиденциальной информации из исключений для конечных пользователей.",
     "Language": "Язык",
@@ -97,6 +97,7 @@
     "Select Venues": "Выбрать места проведения",
     "Select": "Выбрать",
     "shopping cart": "корзине",
+    "Sign In": "Авторизоваться",
     "Sur Name": "Фамилия",
     "SurName": "Фамилия",
     "Swapping to": "Поменяйте местами с",
@@ -106,9 +107,9 @@
     "Time zone": "Часовой пояс",
     "To top up your balance: go to your": "Чтобы пополнить баланс: перейдите к вашей",
     "To up balance:": "Пополнить баланс:",
-    "Total Events:": "Всего событий:",
-    "Total purchase:": "Всего покупок:",
-    "Total ThirdPartyEvents to Add:": "Всего экспортируемых мероприятий:",
+    "Total Events:": "Мероприятий:",
+    "Total purchase:": "Покупок:",
+    "Total ThirdPartyEvents to Add:": "Экспортируемых мероприятий:",
     "Update password": "Обновить пароль",
     "Upload Event from file:": "Загрузить мероприятие из файла:",
     "Use a local account to log in.": "Используйте локальную учетную запись для входа в систему.",
